# causal-portfolio-selector

./: .gitignore  README.md  plan.md  pyproject.toml
configs/: default.yaml
docs/: Best_Models_Report.md  Evaluation_report.md  Synthetic_Generation_Groundtruth_Analysis.md  final_artifacts_manifest.md
reports/: system_report.html
src/causal_portfolio_selector/: __init__.py  artifacts.py  cli.py  config.py  evaluation.py  experiments.py  features.py  knn_prior.py  missing.py  models.py  phase3.py  pipeline.py  synthetic_benchmark.py  targets.py
src/causal_portfolio_selector/learned/: __init__.py  featurize.py  fingerprint.py  model.py  synthetic.py
tests/: test_core.py  test_learned.py  test_synthetic_benchmark.py
